15-envoy-external-services/envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

stats_sinks:
- name: envoy.stat_sinks.metrics_service
  typed_config:
    "@type": type.googleapis.com/envoy.config.metrics.v3.MetricsServiceConfig
    transport_api_version: V3
    grpc_service:
      timeout: 5s
      envoy_grpc:
        cluster_name: external-services

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    traffic_direction: OUTBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: "envoy.access_loggers.http_grpc"
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig"
              common_config:
                log_name: port_10000
                transport_api_version: V3
                grpc_service:
                  timeout: 5s
                  envoy_grpc:
                    cluster_name: external-services

          stat_prefix: edge_http
          use_remote_address: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: namespace.local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: somecluster
                  rate_limits:
                  - actions:
                    - {source_cluster: {}}
                    - {generic_key: {descriptor_value: some_value}}
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              grpc_service:
                timeout: 5s
                envoy_grpc:
                  cluster_name: external-services
          - name: envoy.filters.http.rate_limit
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
              domain: "domain"
              timeout: 5s
              rate_limit_service:
                transport_api_version: V3
                grpc_service:
                  timeout: 5s
                  envoy_grpc:
                    cluster_name: external-services
          - name: envoy.filters.http.router
  clusters:
  - name: somecluster
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: somecluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8082
  - name: external-services
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: round_robin
    load_assignment:
      cluster_name: rate-limit
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 10004
